-point Перед разделением отвественности класса DistributionDiscipline